# .Settings

./: .gitignore  README.en.md  README.ko.md  README.md
.github/scripts/: PAT_SETUP.md  __init__.py  config.yaml  create_daily_issue.py  create_task_issue.py  process_approval.py  project_updater.py  requirements.txt  slack_notifier.py  workflow_tracker.py
.github/scripts/domains/: __init__.py
.github/scripts/domains/commits/: parser.py
.github/scripts/domains/issues/: __init__.py  manager.py
.github/scripts/domains/projects/: __init__.py  field_manager.py  sync.py
.github/scripts/domains/reporting/: __init__.py  daily.py
.github/scripts/infrastructure/: api_client.py
.github/scripts/infrastructure/api/: base.py  commit.py  label.py  project.py  user.py
.github/scripts/infrastructure/models/: __init__.py  board.py  field.py
.github/workflows/: github-automation.yml  task_automation.yml  workflow_tracker.yml
Actions/BaekjoonLogging/: README.en.md  README.md
Actions/BaekjoonLogging/.github/scripts/: Algo_Readme_Action.py
Actions/DailyDevelopmentLogging/: README.en.md  README.ko.md  README.md
Actions/DailyDevelopmentLogging/.github/scripts/: create_daily_issue.py
Actions/GitHubAutomation/: README.en.md  README.md
Actions/GitHubAutomation/.github/scripts/: __init__.py  config.yaml  main.py  requirements.txt  validate_implementation.py
Actions/GitHubAutomation/.github/scripts/core/: __init__.py  api_client.py  commit_parser.py  daily_reporter.py  project_sync.py
Actions/GitHubAutomation/.github/scripts/domains/commits/: __init__.py  parser.py
Actions/GitHubAutomation/.github/scripts/domains/issues/: manager.py
Actions/GitHubAutomation/.github/scripts/domains/projects/: field_manager.py  models.py  sync.py  task_factory.py  todo_sync.py
Actions/GitHubAutomation/.github/scripts/domains/reporting/: daily.py
Actions/GitHubAutomation/.github/scripts/infrastructure/: __init__.py  config_manager.py
Actions/GitHubAutomation/.github/scripts/infrastructure/api/: __init__.py  base.py  issue.py  project.py  repository.py
Actions/GitHubAutomation/.github/workflows/: github-automation.yml
Actions/TaskManagement/: README.en.md  README.md  TaskEX_EN.csv  TaskEX_KO.csv  task_converter.py  workflow.yml
Actions/TaskManagement/en/.github/: create_task_issue_en.py  process_approval_en.py
Actions/TaskManagement/ko/.github/: create_task_issue.py  test_parser.py
Actions/WorkflowTracker/.github/scripts/: project_updater.py  slack_notifier.py  task_report.py  workflow_tracker.py
Actions/WorkflowTracker/workflows/: create-issue-from-commit.yml  project_task_tracker.yml  task_automation.yml  workflow_tracker.yml
AlgorithmSolving/: README.md
DirectX/: .gitignore  CMakeLists.txt  README.en.md  README.ko.md  README.md
Documents/: TaskReportTemplate.md  TeamReadmeTemplate.md
Documents/TaskManagment/: TaskProposalTemplate.md  convert_to_md.py  task_data.csv
OpenGL/: CMakeLists.txt  README.en.md  README.ko.md  README.md
Readme/: RepositoryReadmeTemplate.md  TeamReadme.md
TaskProposals/: 2132114.csv  UI개선.csv  UI개선2.csv  api_integration.csv  tas002.csv  tas12.csv  tas1k.csv  tas21.csv  tas21312.csv  task.csv  task1.csv  task2.csv  task_example.csv  ui_improvement.csv
Unity/: .gitignore  Layout.wlt  settings.json
VSCode/: keybindings.json
